# luxForge

./: .env.example  .gitignore  onyx_osc_map.json  pyproject.toml
.claude/: settings.local.json
fixtures/: generic_dimmer.json  generic_dimmer_rgb.json  generic_dimmer_rgbw.json  generic_led_par.json  generic_moving_head_spot.json  generic_moving_head_wash.json  generic_rgb.json  generic_rgba.json  generic_rgbw.json  generic_strobe.json
scripts/: dev.sh  list_audio_devices.py
src/: config.py  main.py
src/api/: app.py  dependencies.py  schemas.py  websocket.py
src/audio/: analyzer.py  audio_bus.py  beat_detector.py  capture.py  simulator.py  types.py
src/console/: base.py  onyx.py  simulator.py  types.py
src/engine/: events.py  loop.py  state.py
src/fixtures/: library.py  models.py  patch.py
src/mapping/: engine.py  parameters.py  rules.py  transforms.py  types.py
src/protocols/: artnet_adapter.py  base.py  midi_adapter.py  osc_adapter.py  sacn_adapter.py  types.py
src/scenes/: manager.py  models.py  storage.py
tests/: conftest.py  test_integration.py
tests/test_api/: test_routes.py
tests/test_audio/: test_analyzer.py  test_audio_bus.py  test_beat_detector.py  test_capture.py  test_simulator.py
tests/test_console/: test_onyx.py  test_simulator.py
tests/test_engine/: test_events.py  test_loop.py  test_state.py
tests/test_fixtures/: test_fixtures.py
tests/test_mapping/: test_engine.py  test_parameters.py  test_transforms.py
tests/test_protocols/: test_osc_adapter.py  (+3 more)
ui/: package-lock.json  package.json  tailwind.config.ts  vite.config.ts
(+36 files in other folders)
